2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: Bump MD version.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinFileDescriptionTemplate.cs,
	  MonoDevelop.AddinAuthoring/AddinProjectExtension.cs,
	  MonoDevelop.AddinAuthoring/AddinData.cs: Track API.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring.mdp: Updated projects.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinFileDescriptionTemplate.cs,
	  MonoDevelop.AddinAuthoring/TypeSelector.cs: Track api changes.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring.NodeBuilders/AddinReferenceNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/ExtensionsNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/ProjectFolderNodeBuilderExtension.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/ExtensionPointsNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/AddinFolderNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/ReferencesFolderNodeBuilder.cs:
	  Moved the extensible tree view to its own directory.

2008-08-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/NodeSetEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/TypeSelector.cs,
	  MonoDevelop.AddinAuthoring/ExtensionPointsEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/ExtensionEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinDescriptionWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinOptionPanelWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinFeatureWidget.cs,
	  MonoDevelop.AddinAuthoring/CellRendererExtension.cs,
	  MonoDevelop.AddinAuthoring/RegistrySelector.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/AddinFolderNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.mdp, gtk-gui/objects.xml: Use new model
	  for exporting stetic widgets.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs,